--- a/binarydistrict/index.html
+++ b/binarydistrict/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta content="Binary District" name="title">
+  <meta name="description" content="Binary District">
+  <meta name="keywords" content="википедия, энциклопедия" >
+
+  <meta property="og:title" content=""> 
+  met
   <title>🔵Binary District</title>
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" href="reset.css">
@@ -103,6 +109,19 @@
           </div>
       </div>
     </div>
+  </div>
+  <div class="form-subscribe">
+    <form action="https://test-6a9eb.firebaseio.com/data.json" method="POST">
+      <input type="number" name="sum">
+    <input type="text" placeholder="введите ваш пароль">
+    <input type="password" name="password">
+    <input type="email.com" name="email">
+    <input type="submit" value="Submit">
+  </form>
+  </div>
+  <div class="footer__map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8986.569571561144!2d37.62426751977538!3d55.729966649999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54b0f0bfe44af%3A0xfa8ed7315e9f3b9e!2sOktyabr&#39;skaya!5e0!3m2!1sen!2sru!4v1549560499311" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <div class="overlay"></div>
   </div>
 </body>
 </html>
