--- a/bloter/index.html
+++ b/bloter/index.html
@@ -11,6 +11,13 @@
     * {
       box-sizing: border-box;
     }
+    body {
+      margin: 0;
+    }
+    :root {
+      --main-color: #b9b9b9;
+      --border-width: 3px;
+    }
     .container {
       width: 100vw;
       height: 100vh;
@@ -24,14 +31,15 @@
       height: 600px;
       width: 900px;
       display: flex;
+      flex-wrap: wrap;
       position: absolute;
-      background: red;
-      box-shadow: 20px 20px 0px 0px red;
+      background: var(--main-color);
+      box-shadow: 20px 20px 0px 0px var(--main-color);
     }
-    .row {
+    .column {
       /* width: 33%; */
-      border-right: 10px solid black;
-      border-bottom: 10px solid black;
+      border-right: var(--border-width) solid black;
+      border-bottom: var(--border-width) solid black;
       flex: 1;
     }
     /* .row:last-of-type {
@@ -46,11 +54,32 @@
       margin-top: 40px;
       /* animation: color 10s infinite; */
     }
-
-    canvas {
+    .row {
+      width: 100%;
+      border-right: var(--border-width) solid black;
+      border-bottom: var(--border-width) solid black;
       position: relative;
-      z-index: 2;
     }
+    .canvas-container {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top:0;
+      left: 0;
+      display: flex;
+      justify-content: space-evenly;      align-items: center;
+    }
+
+    .box {
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      background: black;
+      right: 180px;
+      top: 200px;
+      mix-blend-mode: overlay;
+    }
+
 
     @keyframes color {
       0% {
@@ -68,10 +97,14 @@
 <body>
   <div class="container">
     <div class="table">
-      <div class="row"></div>
-      <div class="row"></div>
-      <div class="row">
+      <div class="box"></div>
+      <div class="column"></div>
+      <div class="column"></div>
+      <div class="column">
         <div class="circle"></div>
+      </div>
+      <div class="row">
+        <div class="canvas-container"></div>
       </div>
     </div>
   </div>
