--- a/birthday_countdown/index.html
+++ b/birthday_countdown/index.html
@@ -6,9 +6,33 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script src="moment.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="output"></div>
+  <div class="container">
+      <div class="container-inner" id="output"><p>2</p><p>28</p><p>28.</p><p>28.9</p><p>28.99</p><p>28.999</p><p>28.9990</p><p>28.99908</p><p>28.999084</p><p>28.9990843</p><p>28.99908433</p><p>28.999084334</p><p>28.9990843347</p><p>28.99908433473</p><p>28.999084334731</p><p>28.9990843347318</p><p>28.99908433473186</p><p>28.999084334731865</p></div>
+    <div class="waffle-container">
+      <div class="date-container">
+          <div class="date-inner">
+            <p>  рис</p>
+            <p style="
+            mix-blend-mode: color-dodge;">🌞</p>
+            <p > день рождения</p>
+            <p style="
+            mix-blend-mode: color-dodge;">🥳</p>
+            <p style="text-shadow: 2px 5px 0px #000000fa;">11.02</p>
+            <p style="
+            mix-blend-mode: color-dodge;">👇👇</p>
+            <p style="text-shadow: 2px 5px 0px #000000fa;">Пятницкая 59/19С5 </p>
+            <p style="
+            mix-blend-mode: color-dodge;">👆👆</p>
+            <p>ВафлиВафлиВафли</p>
+          </div>
+      </div>
+        
+        <img src="waffle.png" alt="">
+    </div>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
