--- a/birthday_countdown/index.html
+++ b/birthday_countdown/index.html
@@ -20,7 +20,8 @@
             <p > день рождения</p>
             <p style="
             mix-blend-mode: color-dodge;">🥳</p>
-            <p style="text-shadow: 2px 5px 0px #000000fa;">11.02</p>
+            <p style="text-shadow: 2px 5px 0px #000000fa;">11.02
+            <br>11:00-23:00</p>
             <p style="
             mix-blend-mode: color-dodge;">👇👇</p>
             <p style="text-shadow: 2px 5px 0px #000000fa;">Пятницкая 59/19С5 </p>
