--- a/10print/index.html
+++ b/10print/index.html
@@ -4,28 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>🔵</title>
+  <title>Document</title>
   <script src="../_assets/p5.min.js"></script>
   <script src="../_assets/p5.dom.min.js"></script>
-  <script src="app.js"></script>
-
   <style>
     body {
-      height: 100vh;
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: column;
-      justify-content: space-evenly;
-      align-items: center;
       margin: 0;
-    }
-
-    canvas,video {
-      border: 10px solid black;
+      height: 100vh;
     }
   </style>
 </head>
 <body>
-  
+
+<script src="sketch.js"></script>
 </body>
 </html>
